<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="unullmass.net.cricketcounter.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/scoreboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="Batting"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="0 / 0"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/team_a_extras"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"

                        android:fontFamily="sans-serif-condensed"
                        android:text="Extras : 0"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:background="@android:color/black" />

                    <TextView
                        android:id="@+id/team_a_strikerate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="sans-serif-condensed"
                        android:text="SR : 0%"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>


                <Button
                    android:id="@+id/btn_teama_dotball"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="updateDotBallBowled"
                    android:text="@string/dotBallBtnText"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btn_teama_1runs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="4dp"
                    android:onClick="update1RunScored"
                    android:padding="8dp"
                    android:text="@string/singleRunBtnText"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btn_teama_2runs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="4dp"
                    android:onClick="update2RunsScored"
                    android:padding="8dp"
                    android:text="@string/twoRunsBtnText"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btn_teama_3runs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="4dp"
                    android:onClick="update3RunsScored"
                    android:padding="8dp"
                    android:text="@string/threeRunsBtnText"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btn_teama_4runs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="4dp"
                    android:onClick="update4RunsScored"
                    android:padding="8dp"
                    android:text="@string/fourRunsBtnText"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btn_teama_6runs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="4dp"
                    android:onClick="update6RunsScored"
                    android:padding="8dp"
                    android:text="@string/sixRunsBtnText"
                    android:textSize="10sp" />


            </LinearLayout>
            <!-- Border to separate the two scoreboards !-->
            <View
                android:id="@+id/scoreboardBorder"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="Bowling"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_overs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="0.0"
                    android:textColor="#000000"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="2dp"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/team_b_economy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:fontFamily="sans-serif-condensed"
                        android:layout_gravity="center"
                        android:text="Eco : 0.0"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_teamb_3pts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="updateNoBallBowled"
                    android:padding="8dp"
                    android:text="@string/noBallBtnText"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btn_teamb_2pts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="4dp"
                    android:onClick="updateWideBallBowled"
                    android:padding="8dp"
                    android:text="@string/wideBtnText"
                    android:textSize="10sp" />


                <Button
                    android:id="@+id/btn_teamb_1pts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="4dp"
                    android:onClick="updateWicketTaken"
                    android:padding="8dp"
                    android:text="@string/wicketBtnText"
                    android:textSize="10sp" />


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/scoreboard"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:onClick="resetTeamScores"
            android:text="RESET"
            android:textSize="10sp" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>